--- a/app/views/admin/accounts/_form.html.erb
+++ b/app/views/admin/accounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: account, local: true) do |form| %>
+<%= form_with(model: [:admin, account], local: true) do |form| %>
   <% if account.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(account.errors.count, "error") %> prohibited this gg from being saved:</h2>
@@ -11,24 +11,24 @@
     </div>
   <% end %>
   <div class="form-group">
+    <%= form.label :order_title %>
+    <%= form.select :order_id,options_from_collection_for_select(Order.where(:enable=>true).all, 'id', 'title',account.order_id),{},{:class=>"form-control"} %>
+  </div>
+  <div class="form-group">
     <%= form.label :account_category_id %>
-    <%= form.select :account_category_id,options_from_collection_for_select(AccountCategory.where(:enable=>true).all, 'id', 'title',account.account_category_id),{},{:class=>"form-control"} %>
+    <%= form.select :account_category_id,options_from_collection_for_select(AccountCategory.where(:enable=>true).all, 'id', 'title' ,account.account_category_id),{},{:class=>"form-control"} %>
   </div>
   <div class="form-group">
     <%= form.label :transaction_date %>
     <%= form.date_field :transaction_date, :class => "form-control", :required => "required" %>
   </div>
   <div class="form-group">
-    <%= form.label :cash %>
-    <%= form.number_field :cash, :class => "form-control", :required => "required" %>
+    <%= form.label :payment %>
+    <%= form.number_field :payment, :class => "form-control", :value=>30000, :required => "required" %>
   </div>
   <div class="form-group">
-    <%= form.label :credit %>
-    <%= form.number_field :credit, :class => "form-control", :required => "required" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :point %>
-    <%= form.number_field :point, :class => "form-control", :required => "required" %>
+    <%= form.label :transaction_date %>
+    <%= form.date_field :transaction_date, :class => "form-control", :required => "required" %>
   </div>
   <div class="form-group">
     <%= form.submit :class => 'btn btn-primary btn-block btn-lg' %>
