--- a/app/views/admin/accounts/new.html.erb
+++ b/app/views/admin/accounts/new.html.erb
@@ -1,7 +1,13 @@
-<div class="container">
+<section id="new-account" class="container">
+  <div class="row">
+    <h2 class="col-12"><%= t(:new_account) %></h2>
+  </div>
+  <div class="row">
+    <%= render :partial => 'layouts/notice', :locals => { :errors => @account.errors, :notice => notice, :alert => alert } %>
+  </div>
   <div class="row">
     <div class="col-12">
       <%= render 'form', account: @account %>
     </div>
   </div>
-</div>
+</section>
