--- a/app/views/admin/accounts/show.html.erb
+++ b/app/views/admin/accounts/show.html.erb
@@ -1,4 +1,27 @@
-<p id="notice"><%= notice %></p>
+<section id="show-account" class="container">
+  <div class="row">
+    <div class="col-12">
+      <article class="card">
+        <h3 class="card-header"><%=@account.title %></h3>
+        <div class="card-body">
+          <dl>
 
-<%= link_to 'Edit', edit_account_path(@account) %> |
-<%= link_to 'Back', accounts_path %>
+            <dt><%= t(:created_at, scope: [:activerecord, :attributes, :account]) %></dt>
+            <dd><%= I18n.l @account.created_at.to_date, :format => :long %></dd>
+            <dt><%= t(:updated_at, scope: [:activerecord, :attributes, :account]) %></dt>
+            <dd><%= I18n.l @account.updated_at.to_date, :format => :long %></dd>
+          </dl>
+        </div>
+      </article>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-xl-6">
+      <%= link_to t(:link_list), admin_accounts_path, class: 'btn btn-secondary' %>
+    </div>
+    <div class="col-12 col-xl-6 text-right">
+      <%= link_to t(:edit), edit_admin_account_path(@account), class: 'btn btn-secondary' %>
+      <%= link_to t(:delete), admin_account_path(@account), class: 'btn btn-danger' %>
+    </div>
+  </div>
+</section>
