--- a/app/views/admin/branches/show.html.erb
+++ b/app/views/admin/branches/show.html.erb
@@ -1,13 +1,29 @@
 <section id="show-branch" class="container">
   <div class="row">
     <div class="col-12">
-      <div class="card">
-        <h3 class="card-header"></h3>
-      </div>
-    </div>    
-    <div class="col-12">
-      <div class="sl_view_bottom">
-      </div>
+      <article class="card">
+        <h3 class="card-header"><%=@branch.title %></h3>
+        <div class="card-body">
+          <dl>
+
+            <dt><%= t(:orders_count, scope: [:activerecord, :attributes, :branch]) %></dt>
+            <dd><%= @branch.orders_count %></dd>
+            <dt><%= t(:created_at, scope: [:activerecord, :attributes, :branch]) %></dt>
+            <dd><%= I18n.l @branch.created_at.to_date, :format => :long %></dd>
+            <dt><%= t(:updated_at, scope: [:activerecord, :attributes, :branch]) %></dt>
+            <dd><%= I18n.l @branch.updated_at.to_date, :format => :long %></dd>
+          </dl>
+        </div>
+      </article>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-xl-6">
+      <%= link_to t(:link_list), admin_branches_path, class: 'btn btn-secondary' %>
+    </div>
+    <div class="col-12 col-xl-6 text-right">
+      <%= link_to t(:edit), edit_admin_branch_path(@branch), class: 'btn btn-secondary' %>
+      <%= link_to t(:delete), admin_branch_path(@branch), class: 'btn btn-danger' %>
     </div>
   </div>
 </section>
