--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,18 +1,31 @@
-<%= form_with(model: [:admin, @order], local: true) do |form| %>
-  <% if order.errors.any? %>
-    <div id="error_explanation" class="alert alert-danger">
-      <a href="#" class="close" data-dismiss="alert">&times;</a>
-      <h2><%= pluralize(order.errors.count, "error") %> prohibited this request from being saved:</h2>
-      <ul>
-        <% order.errors.full_messages.each do |msg| %>
-          <li>
-            <%= msg %>
-          </li>
-        <% end %>
-      </ul>
+<%= form_with(model: [:admin, order], local: true) do |form| %>
+  <div class="card">
+    <div class="card-body">
+      <div class="form-row">
+        <div class="col-12 form-group">
+          <%= form.label :user_id %>
+          <%= form.select :user_id,options_from_collection_for_select(User.where(:enable=>true).all, 'id', 'name',order.user_id),{},{:class=>"form-control"} %>
+        </div>
+        <div class="col-12 form-group">
+          <%= form.label :branch_id %>
+          <%= form.select :branch_id,options_from_collection_for_select(Branch.where(:enable=>true).all, 'id', 'title',order.branch_id),{},{:class=>"form-control"} %>
+        </div>
+        <div class="col-12 form-group">
+          <%= form.label :number %>
+          <%= form.text_field :number, :class => 'form-control', :required => 'required'  %>
+        </div>
+        <div class="col-12 form-group">
+          <%= form.label :title %>
+          <%= form.text_field :title, :class => 'form-control', :required => 'required' %>
+        </div>
+        <div class="col-12 form-group">
+          <%= form.label :contract_date %>
+          <%= form.date_field :contract_date, :class => "form-control", :required => "required" %>
+        </div>
+      </div>
     </div>
-  <% end %>
+  </div>
   <div class="form-group">
-    <%= form.submit :class=>"btn btn-primary btn-lg btn-block" %>
+    <%= form.submit :class => 'btn btn-primary btn-block btn-lg' %>
   </div>
 <% end %>
