--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,25 +1,13 @@
-<div class="container">
+<section id="edit-branch" class="container">
+  <div class="row">
+    <h2 class="col-12"><%= t(:edit_order) %></h2>
+  </div>
+  <div class="row">
+    <%= render :partial => 'layouts/notice', :locals => { :errors => @order.errors, :notice => notice, :alert => alert } %>
+  </div>
   <div class="row">
     <div class="col-12">
-      <%= form_with(model: [:admin, @order], local: true, :html => { :id => "order_form" }) do |form| %>
-        <%= form.fields_for :orders_products do |op| %>
-          <div class="form-group">
-            <%= op.label :quantity %>
-            <%= op.number_field :quantity, :class => "form-control", :required => "required" %>
-          </div>
-          <div class="form-group">
-            <%= op.label :price %>
-            <%= op.number_field :price, :class => "form-control", :required => "required" %>
-          </div>
-        <% end %>
-        <div class="form-group">
-          <%= form.label :transaction_date %>
-          <%= form.date_field :transaction_date, :class => "form-control", :required => "required" %>
-        </div>
-        <div class="form-group">
-          <%= form.submit :class => "btn btn-primary btn-lg btn-block" %>
-        </div>
-      <% end %>
+      <%= render 'form', order: @order %>
     </div>
   </div>
-</div>
+</section>
