--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,17 +1,27 @@
-<div id="messages">
+<div id="messages" class="col-12">
+  <% if errors.present? %>
+    <div class="alert alert-danger" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <h4><%= pluralize(errors.count, "error") %> prohibited this request from being saved:</h4>
+      <ul>
+        <% errors.full_messages.each do |msg| %>
+          <li>
+            <%= msg %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <% if notice %>
     <div class="alert alert-success" role="alert">
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span><span class="sr-only"><%= t(:close) %></span></button>
-      <h4><%= t(:success_title) %></h4>
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only"><%=t(:close) %></span></button>
+      <h4><%=t(:success_title)%></h4>
       <p id="message-notice"><%= notice %></p>
     </div>
   <% end %>
   <% if alert %>
     <div class="alert alert-danger" role="alert">
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span><span class="sr-only"><%= t(:close) %></span></button>
-      <h4><%= t(:alert_title) %></h4>
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only"><%=t(:close) %></span></button>
+      <h4><%=t(:alert_title)%></h4>
       <p id="message-alert"><%= alert %></p>
     </div>
   <% end %>
