--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -1,94 +1,27 @@
-<header>
-  <div id="header-top">
-    <div class="container">
-      <div class="row">
-        <h1 class="col-12"><%= link_to t(:service_name), admin_path %></h1>
-        <ul id="top-menu">
-          <% if admin_signed_in? %>
-            <li style="margin-right:30px">
-              <% if current_admin.admin_picture.present? %>
-                <%=image_tag(current_admin.admin_picture.picture.small_thumb.url,{:height=>50,:width=>50}) %>
-              <% else %>
-                <%= link_to edit_admin_registration_path do %><%= t(:welcome) %>
-                <% end %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_admin_session_path, :id => "p_logout" do %>
-                <i class="material-icons" style="font-size:35px;vertical-align:middle">highlight_off</i><span><%= t(:logout) %></span>
-              <% end %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to new_admin_session_path do %>
-                <i class="material-icons">login</i><span><%= t(:login) %></span>
-              <% end %>
-            </li>
+<header class="row">
+  <div class="col-12">
+    <ul id="top-menu">
+      <% if admin_signed_in? %>
+        <li id="admin-info">
+          <%= link_to edit_admin_registration_path do %>
+            <% if current_admin.admin_picture.present? %>
+              <%= image_tag(current_admin.admin_picture.picture.small_thumb.url, { :height => 50, :width => 50 }) %>
+            <% end %>
+            <%= current_admin.name %>
           <% end %>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div id="header-main">
-    <nav id="main-menu" class="container">
-      <ul class="nav">
-        <li class="nav-item
-          <% if ['orders'].include?(params[:controller]) %> active
-          <% end %>">
-          <%= link_to admin_orders_path, :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
-            <i class="material-icons">payment</i><span><%= t(:order, scope: [:activerecord, :models]) %></span>
-          <% end %>
-          <ul class="dropdown-menu">
-            <li
-              <% if params[:controller] == 'orders' and params[:action] == 'index' %> class="active"
-              <% end %>>
-              <%= link_to admin_orders_path, :class => "nav-link" do %>
-                <i class="material-icons">local_cafe</i><span><%= t(:search_order) %></span>
-              <% end %>
-            </li>
-          </ul>
         </li>
-          <li class="nav-item
-            <% if ['accounts', 'accounts_products', 'accounts_product_categories'].include?(params[:controller]) %> active
-            <% end %>">
-            <%= link_to raw('<i class="material-icons">group</i>'+t(:account, scope: [:activerecord, :models])),admin_accounts_path,:class => "nav-link"  %>
-          </li>
-        <li class="nav-item
-          <% if ['users'].include?(params[:controller]) %> active
-          <% end %>">
-          <%= link_to '#', :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
-            <i class="material-icons">group</i><span><%= t(:user, scope: [:activerecord, :models]) %></span>
+        <li>
+          <%= link_to destroy_admin_session_path, :id => "p_logout" do %>
+            <i class="material-icons" style="font-size:35px;vertical-align:middle">highlight_off</i><span><%= t(:logout) %></span>
           <% end %>
-          <ul class="dropdown-menu">
-            <li<% if params[:controller] == 'users' %> class="active"<% end %>>
-              <%= link_to admin_users_path, :class => "nav-link" do %>
-                <i class="material-icons">group</i><span><%= t(:user, scope: [:activerecord, :models]) %></span>
-              <% end %>
-            </li>
-            <li
-              <% if params[:controller] == 'admins' %> class="active"
-              <% end %>>
-              <%= link_to admin_operators_path, :class => "nav-link" do %>
-                <i class="material-icons">group</i><span><%= t(:operator, scope: [:activerecord, :models]) %></span>
-              <% end %>
-            </li>
-          </ul>
-
         </li>
-        <li class="nav-item
-          <% if ['branches'].include?(params[:controller]) %> active
-          <% end %>">
-          <%= link_to '#', :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
-            <i class="material-icons">settings</i><span><%= t(:setting, scope: [:activerecord, :models]) %></span>
+      <% else %>
+        <li>
+          <%= link_to new_admin_session_path do %>
+            <i class="material-icons">login</i><span><%= t(:login) %></span>
           <% end %>
-          <ul class="dropdown-menu">
-            <li<% if params[:controller] == 'branches' %> class="active"<% end %>>
-              <%= link_to admin_branches_path, :class => "nav-link" do %>
-                <i class="material-icons">slideshow</i><span><%= t(:branch, scope: [:activerecord, :models]) %></span>
-              <% end %>
-            </li>
-      </ul>
-    </nav>
+        </li>
+      <% end %>
+    </ul>
   </div>
 </header>
-
