--- a/app/views/admin/receipts/show.html.erb
+++ b/app/views/admin/receipts/show.html.erb
@@ -1,5 +1,8 @@
 <section id="show-branch" class="container">
   <div class="row">
+    <%= render :partial => 'layouts/notice', :locals => { :errors => @receipt.errors, :notice => notice, :alert => alert } %>
+  </div>
+  <div class="row">
     <div class="col-12">
       <article class="card">
         <h3 class="card-header"><%=@receipt.title %></h3>
