--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -13,20 +13,16 @@
     </div>
   <% end %>
   <div class="form-group">
+    <%= form.label :address_id %>
+    <%= form.select :address_id,options_from_collection_for_select(Address.where(:enable=>true).all, 'id', 'title',user.address_id),{},{:class=>"form-control"} %>
+  </div>
+  <div class="form-group">
     <%= form.label :name %>
     <%= form.text_field :name, :class => "form-control", :required => "required" %>
   </div>
   <div class="form-group">
     <%= form.label :phone %>
     <%= form.text_field :phone, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :email %>
-    <%= form.email_field :email, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :address %>
-    <%= form.text_field :address, :class => "form-control" %>
   </div>
   <div class="form-group">
     <%= form.submit :class=>"btn btn-primary btn-lg btn-block" %>
