--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,17 +1,19 @@
 <section id="show-user" class="container">
   <div class="row">
+    <%= render :partial => 'layouts/notice', :locals => { :errors => @user.errors, :notice => notice, :alert => alert } %>
+  </div>
+  <div class="row">
     <div class="col-12">
       <article class="card">
-        <h3 class="card-header"><%=@branch.title %></h3>
+        <h3 class="card-header"><%=@user.name %></h3>
         <div class="card-body">
           <dl>
-
-            <dt><%= t(:orders_count, scope: [:activerecord, :attributes, :branch]) %></dt>
-            <dd><%= @branch.orders_count %></dd>
-            <dt><%= t(:created_at, scope: [:activerecord, :attributes, :product]) %></dt>
-            <dd><%= I18n.l @branch.created_at.to_date, :format => :long %></dd>
-            <dt><%= t(:updated_at, scope: [:activerecord, :attributes, :product]) %></dt>
-            <dd><%= I18n.l @branch.updated_at.to_date, :format => :long %></dd>
+            <dt><%= t(:orders_count, scope: [:activerecord, :attributes, :user]) %></dt>
+            <dd><%= @user.orders_count %></dd>
+            <dt><%= t(:created_at, scope: [:activerecord, :attributes, :user]) %></dt>
+            <dd><%= I18n.l @user.created_at.to_date, :format => :long %></dd>
+            <dt><%= t(:updated_at, scope: [:activerecord, :attributes, :user]) %></dt>
+            <dd><%= I18n.l @user.updated_at.to_date, :format => :long %></dd>
           </dl>
         </div>
       </article>
@@ -19,11 +21,11 @@
   </div>
   <div class="row">
     <div class="col-12 col-xl-6">
-      <%= link_to t(:link_list), admin_branches_path, class: 'btn btn-secondary' %>
+      <%= link_to t(:link_list), admin_users_path, class: 'btn btn-secondary' %>
     </div>
     <div class="col-12 col-xl-6 text-right">
-      <%= link_to t(:edit), edit_admin_branch_path(@branch), class: 'btn btn-secondary' %>
-      <%= link_to t(:delete), admin_branch_path(@branch), class: 'btn btn-danger' %>
+      <%= link_to t(:edit), edit_admin_user_path(@user), class: 'btn btn-secondary' %>
+      <%= link_to t(:delete), admin_user_path(@user), class: 'btn btn-danger' %>
     </div>
   </div>
 </section>
